--- a/public/index.html
+++ b/public/index.html
@@ -17,27 +17,31 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
-  </head>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
+    <!-- FONT AWESOME -->
+    <script src="https://kit.fontawesome.com/4f233eda04.js" crossorigin="anonymous"></script>
+  </head>
+  
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
       <span>tweeter</span>
     </nav>
-    <header>
+    <header class="main-header">
       <div>
           <img src="/images/profile-hex.png"> 
       </div>
       <br>
       <div>
-          <h2>Jay Martens</h2>
+          <h2><strong>Jay</strong> Martens</h2>
       </div>
   </header>
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form method="POST" action="/tweets">          
+        <form method="POST" action="/tweets">
           <textarea name="text" rows="1" id="tweet-text" placeholder="What are you humming about?"></textarea>
           <div>
             <button type="submit">Tweet</button>
@@ -45,6 +49,32 @@
           </div>
         </form>
       </section>
+      <article>
+        <header>
+          <div>
+            <div>
+              <img src="https://i.imgur.com/73hZDYK.png">
+            </div>
+            <div>
+              Newton
+            </div>
+          </div>
+          <div class="handle">
+            @SirIsaac
+          </div>
+        </header>
+        <div class="tweet-container">
+          If I have seen further it is by standing on the shoulders of giants
+        </div>
+        <footer>
+          <div>
+            10 days ago
+          </div>
+          <div>
+            <i class="fas fa-flag"></i><i class="fas fa-retweet"></i><i class="fas fa-heart"></i>
+          </div>
+        </footer>
+      </article>
     </main>
   </body>
 </html>
