--- a/public/index.html
+++ b/public/index.html
@@ -49,32 +49,8 @@
           </div>
         </form>
       </section>
-      <article>
-        <header>
-          <div>
-            <div>
-              <img src="https://i.imgur.com/73hZDYK.png">
-            </div>
-            <div>
-              Newton
-            </div>
-          </div>
-          <div class="handle">
-            @SirIsaac
-          </div>
-        </header>
-        <div class="tweet-container">
-          If I have seen further it is by standing on the shoulders of giants
-        </div>
-        <footer>
-          <div>
-            10 days ago
-          </div>
-          <div>
-            <i class="fas fa-flag"></i><i class="fas fa-retweet"></i><i class="fas fa-heart"></i>
-          </div>
-        </footer>
-      </article>
+      <div id="tweets-container">
+      </div>
     </main>
   </body>
 </html>
