Added ajax calls to POST tweets and GET tweets, then it now renders tweets based on the GET calls response (no longer hard coded)

--- a/public/index.html
+++ b/public/index.html
@@ -41,10 +41,10 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form method="POST" action="/tweets">
+        <form id="submit-tweet-form">
           <textarea name="text" rows="1" id="tweet-text" placeholder="What are you humming about?"></textarea>
           <div>
-            <button type="submit">Tweet</button>
+            <button type="submit" id="">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
